--- a/realstyle.css
+++ b/realstyle.css
@@ -24,3 +24,30 @@ select {
   text-align: center;
   border: 2px solid black;
 }
+
+input[type=submit] {
+  background-color: rebeccapurple;
+  color: white;
+  font-size: 18px;
+  padding: 5px 10px;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+  input[type=submit]:hover {
+    -moz-box-shadow: 0px 0px 10px Green;
+    -webkit-box-shadow: 0px 0px 10px Green;
+    box-shadow: 0px 0px 10px Green;
+  }
+
+  #Locations, #Beds, #Baths {
+    padding: 2% 4%;
+  }
+  #SUBMIT {
+    padding-top: 2%
+  }
+
+
+h2 {
+  font-family: Coiny;
+}
