--- a/results.css
+++ b/results.css
@@ -13,3 +13,43 @@
   text-align: center;
   font-family: Coiny;
 }
+
+.failure {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 2px solid rgba(23, 62, 255, 0.85);
+  padding: 1%;
+  font-size: 30px;
+  text-align: center;
+  font-family: "Chalkboard SE";
+  color: rebeccapurple;
+}
+
+h1 {
+    font-family: Coiny;
+    text-align: center;
+    border: 2px solid midnightblue;
+}
+
+.info {
+    font-size: 18px;
+    font-family: "Chalkboard SE";
+    text-align: center;
+    border: 1px solid black;
+    color: lightyellow;
+}
+
+div input[type=submit] {
+  background-color: rebeccapurple;
+  color: white;
+  font-size: 18px;
+  padding: 5px 10px;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+div input[type=submit]:hover {
+    -moz-box-shadow: 0px 0px 10px #255b80;
+    -webkit-box-shadow: 0px 0px 10px #305c80;
+    box-shadow: 0px 0px 10px #235980;
+  }
